# funny-endpoints

./: .env  Cargo.toml  README.md  Rocket.toml
db/migrations/: 20231025132000_init.sql
docker/: docker-compose.yml
entity/: Cargo.toml
entity/src/: beer_brand.rs  lib.rs
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20231012_120758_create_tasks_table.rs  main.rs
migrations/: 20231012082844_initial-tables.sql
src/: controller.rs  main.rs  main2.rs  main_tokio.rs  persistence.rs  pool.rs  service.rs
src/controller/: beer_brand_controller.rs  beer_brand_controller_test.rs  beer_controller.rs  drink_controller.rs  start_controller.rs  start_controller_test.rs
src/persistence/: beer_brand_persistence.rs  drink_entity.rs
src/service/: beer_service.rs
test/: controller_test.rs
test/testdata/: beer_brand.json
test/testdata/sql/: beer_brand_202310231819.sql
tests/: start_controller_test.rs
tests/testdata/sql/: beer_brand_202310251350.sql
