[package]
name = "funny_endponts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
serde_json = "1.0.107"
rocket = { version = "0.5.0-rc.3", features = [ "json" ] }
uuid = "1.4.1"
serde = { version = "1.0.188", features = ["derive"] }
sqlx = { version= "0.7.2", features = ["macros", "migrate", "runtime-tokio-rustls", "postgres"] }
#rocket_db_pools = { version = "0.1.0-rc.3", features = ["sqlx_postgres"] } todo delete
dotenv = "0.15.0"
tokio = { version = "1.33.0", features = ["full"] }

