[package]
name = "funny_endpoints"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
rocket = { version = "0.5.0-rc.3", features = [ "json" ] }
sea-orm-rocket = "0.5.2"
sea-orm = { version="0.12.3", features=["runtime-tokio-native-tls", "sqlx-postgres", "macros"] }
async-trait = { version = "0.1" }
entity = { path = "entity" }
migration = { path = "migration" }

uuid = "1.4.1"

# rocket_db_pools = {version= "0.1.0-rc.3", features= ["sqlx_postgres"]} 
# sqlx = { version= "0.7.2", features = ["macros", "migrate", "runtime-tokio-rustls", "postgres"] }
# dotenv = "0.15.0"
# tokio = { version = "1.33.0", features = ["full"] }



