[package]
name = "funny_endpoints"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
rocket = { version = "0.5.0-rc.3", features = [ "json" ] }
async-trait = { version = "0.1" }
sqlx = { version= "0.6.0", features = ["macros", "migrate", "postgres"] }
rocket_db_pools = {version= "0.1.0-rc.3", features= ["sqlx_postgres"]} 

uuid = "1.4.1"
anyhow = "1.0.75"
# dotenv = "0.15.0"




